...
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/indicator_1" />

        <Spinner
            android:id="@+id/spinner_target_language"
            android:layout_width="211dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:entries="@array/paises"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/target_language" />

        <Spinner
            android:id="@+id/spinner_source_language"
            android:layout_width="211dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:entries="@array/paises"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
...
