...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.project.tfg.ui.registros.RegistrosFragment">

        <EditText
            android:id="@+id/email_input"
            android:layout_width="329dp"
            android:layout_height="51dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/email_input_hint"
            android:inputType="textEmailSubject"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="328dp"
            android:layout_height="51dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/password_input_hint"
            android:inputType="textPassword"
...
